@@ -89,8 +89,8 @@ public class DigestServerAuthenticationHelper  {
         long time = date.getTime();
         Random rand = new Random();
         long pad = rand.nextLong();
-        String nonceString = (new Long(time)).toString()
-                + (new Long(pad)).toString();
+        String nonceString = (Long.valueOf(time)).toString()
+                + (Long.valueOf(pad)).toString();
         byte mdbytes[] = messageDigest.digest(nonceString.getBytes());
         // Convert the mdbytes array into a hex string.
         return toHexString(mdbytes);
