@@ -126,7 +126,7 @@ public class DialogEarlyStateTimeoutTest extends TestCase {
                         .createAddress(fromAddress);
                 fromNameAddress.setDisplayName(fromDisplayName);
                 FromHeader fromHeader = headerFactory.createFromHeader(
-                        fromNameAddress, new Integer(
+                        fromNameAddress, Integer.valueOf(
                                 (int) (Math.random() * Integer.MAX_VALUE))
                                 .toString());
 
